--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -4700,4 +4700,713 @@
 #footer .btn #topbtn i {
   color: #909090;
   font-size: 23px;
+}
+
+#navbar .logo-pages {
+  display: flex;
+}
+#navbar .logo-pages .logo {
+  width: 20px;
+  height: 20px;
+}
+#navbar .logo-pages .logo img {
+  width: 70px;
+  margin-top: 40px;
+}
+#navbar .logo-pages .pages {
+  margin-left: 70px;
+  margin-top: 55px;
+  font-size: 19px;
+}
+#navbar .logo-pages .pages ul {
+  display: flex;
+  gap: 20px;
+}
+#navbar .logo-pages .pages ul li {
+  list-style: none;
+}
+#navbar .logo-pages .pages ul li a {
+  text-decoration: none;
+  color: black;
+  font-family: "Times New Roman", Times, serif;
+}
+#navbar .basket-search {
+  margin-top: 55px;
+  display: flex;
+  margin-left: 476px;
+}
+#navbar .basket-search .basket {
+  display: flex;
+}
+#navbar .basket-search .basket a i {
+  color: black;
+  font-size: 20px;
+}
+#navbar .basket-search .basket .basket-number {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: red;
+  color: white;
+  margin-top: -7px;
+  margin-left: -5px;
+  position: relative;
+  margin-right: 10px;
+}
+#navbar .basket-search .basket .basket-number span {
+  font-size: 13px;
+  position: absolute;
+  left: 3px;
+  bottom: -2px;
+}
+#navbar .basket-search .search {
+  margin-left: 12px;
+  cursor: pointer;
+}
+#navbar .basket-search .search i {
+  font-size: 20px;
+}
+#navbar .basket-search .wishlist {
+  margin-left: 12px;
+}
+#navbar .basket-search .wishlist a i {
+  font-size: 20px;
+  color: black;
+}
+#navbar .basket-search .wishlist .border {
+  margin-left: 10px;
+}
+#navbar .basket-search .user {
+  margin-left: 12px;
+  cursor: pointer;
+}
+#navbar .basket-search .user i {
+  font-size: 20px;
+  color: black;
+}
+#navbar .basket-search .user .border {
+  margin-left: 10px;
+}
+#navbar .search-input {
+  right: 113px;
+  position: absolute;
+  top: 103px;
+}
+#navbar .search-input input {
+  border: none;
+  outline: none;
+  padding-left: 15px;
+}
+#navbar .login-register {
+  width: 230px;
+  height: 80px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 7px;
+  position: absolute;
+  right: 109px;
+  top: 91px;
+}
+#navbar .login-register a {
+  margin-left: 20px;
+  font-size: 17px;
+  padding-top: 7px;
+  text-decoration: none;
+  color: black;
+}
+#navbar .login-register .border {
+  margin-top: 13px;
+}
+
+#background .background-images {
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+}
+#background .background-images h2 {
+  text-align: center;
+  color: white;
+  padding-top: 120px;
+  font-family: monospace;
+}
+
+#blog-detail {
+  margin-top: 150px;
+}
+#blog-detail .details .section-1 .blog-image img {
+  width: 100%;
+}
+#blog-detail .details .section-1 .name-date {
+  display: flex;
+  margin-top: 20px;
+}
+#blog-detail .details .section-1 .name-date .name p {
+  color: gray;
+  font-family: initial;
+  cursor: pointer;
+}
+#blog-detail .details .section-1 .name-date .name p:hover {
+  color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#blog-detail .details .section-1 .name-date .date p {
+  color: gray;
+  font-family: initial;
+  cursor: pointer;
+}
+#blog-detail .details .section-1 .name-date .date p:hover {
+  color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#blog-detail .details .section-1 .title h1 {
+  text-decoration: none;
+  color: black;
+  font-size: 35px;
+  font-family: auto;
+}
+#blog-detail .details .section-1 .title h1:hover {
+  color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#blog-detail .details .section-1 .description-1 {
+  margin-top: 20px;
+}
+#blog-detail .details .section-1 .description-1 p {
+  color: gray;
+  font-family: auto;
+}
+#blog-detail .details .section-1 .description-2 {
+  margin-top: 50px;
+}
+#blog-detail .details .section-1 .description-2 p {
+  font-family: auto;
+}
+#blog-detail .details .section-1 .description-3 {
+  margin-top: 50px;
+}
+#blog-detail .details .section-1 .description-3 p {
+  color: gray;
+  font-family: auto;
+}
+#blog-detail .details .section-1 .icons {
+  text-align: center;
+  margin-top: 40px;
+  margin-left: 340px;
+}
+#blog-detail .details .section-1 .icons ul {
+  display: flex;
+  gap: 15px;
+}
+#blog-detail .details .section-1 .icons ul li {
+  list-style: none;
+}
+#blog-detail .details .section-1 .icons ul li a {
+  text-decoration: none;
+  color: black;
+}
+#blog-detail .details .section-1 .icons ul li a i:hover {
+  color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#blog-detail .details .section-2 {
+  margin-top: 50px;
+}
+#blog-detail .details .section-2 .image-names .image-name {
+  display: flex;
+}
+#blog-detail .details .section-2 .image-names .image-name .image img {
+  width: 100px;
+}
+#blog-detail .details .section-2 .image-names .image-name .name {
+  margin-left: 50px;
+}
+#blog-detail .details .section-2 .image-names .image-name .name p {
+  color: gray;
+  font-family: auto;
+}
+#blog-detail .details .section-2 .image-names .image-name .name span {
+  font-size: 25px;
+  font-family: auto;
+  margin-top: -10px;
+}
+#blog-detail .details .section-2 .image-names .description-4 {
+  width: 708px;
+  margin-left: 149px;
+}
+#blog-detail .details .section-2 .image-names .description-4 p {
+  color: gray;
+  font-family: auto;
+}
+#blog-detail .details .section-2 .image-names .icons {
+  text-align: center;
+  margin-top: 40px;
+  margin-left: 115px;
+}
+#blog-detail .details .section-2 .image-names .icons ul {
+  display: flex;
+  gap: 15px;
+}
+#blog-detail .details .section-2 .image-names .icons ul li {
+  list-style: none;
+}
+#blog-detail .details .section-2 .image-names .icons ul li a {
+  text-decoration: none;
+  color: black;
+}
+#blog-detail .details .section-2 .image-names .icons ul li a i:hover {
+  color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#blog-detail .details .section-3 {
+  margin-top: 100px;
+}
+#blog-detail .details .section-3 .comments-words h4 {
+  font-family: auto;
+}
+#blog-detail .details .section-3 .comments {
+  margin-top: 50px;
+}
+#blog-detail .details .section-3 .comments .image-names .image-name {
+  display: flex;
+}
+#blog-detail .details .section-3 .comments .image-names .image-name .image img {
+  width: 100px;
+}
+#blog-detail .details .section-3 .comments .image-names .image-name .name {
+  margin-left: 50px;
+  display: flex;
+}
+#blog-detail .details .section-3 .comments .image-names .image-name .name p {
+  font-family: auto;
+  font-size: 20px;
+}
+#blog-detail .details .section-3 .comments .image-names .image-name .name span {
+  font-family: auto;
+  color: gray;
+  margin-top: 8px;
+  margin-left: 10px;
+}
+#blog-detail .details .section-3 .comments .image-names .description-4 {
+  width: 708px;
+  margin-left: 149px;
+  margin-top: -50px;
+}
+#blog-detail .details .section-3 .comments .image-names .description-4 p {
+  color: gray;
+  font-family: auto;
+}
+#blog-detail .details .section-3 .comment-2 {
+  margin-top: 50px;
+}
+#blog-detail .details .section-3 .comment-2 .image-names .image-name {
+  display: flex;
+}
+#blog-detail .details .section-3 .comment-2 .image-names .image-name .image img {
+  width: 100px;
+}
+#blog-detail .details .section-3 .comment-2 .image-names .image-name .name {
+  margin-left: 50px;
+  display: flex;
+}
+#blog-detail .details .section-3 .comment-2 .image-names .image-name .name p {
+  font-family: auto;
+  font-size: 20px;
+}
+#blog-detail .details .section-3 .comment-2 .image-names .image-name .name span {
+  font-family: auto;
+  color: gray;
+  margin-top: 8px;
+  margin-left: 10px;
+}
+#blog-detail .details .section-3 .comment-2 .image-names .description-4 {
+  width: 708px;
+  margin-left: 149px;
+  margin-top: -50px;
+}
+#blog-detail .details .section-3 .comment-2 .image-names .description-4 p {
+  color: gray;
+  font-family: auto;
+}
+#blog-detail .details .section-3 .comment-3 {
+  margin-top: 50px;
+}
+#blog-detail .details .section-3 .comment-3 .image-names .image-name {
+  display: flex;
+}
+#blog-detail .details .section-3 .comment-3 .image-names .image-name .image img {
+  width: 100px;
+}
+#blog-detail .details .section-3 .comment-3 .image-names .image-name .name {
+  margin-left: 50px;
+  display: flex;
+}
+#blog-detail .details .section-3 .comment-3 .image-names .image-name .name p {
+  font-family: auto;
+  font-size: 20px;
+}
+#blog-detail .details .section-3 .comment-3 .image-names .image-name .name span {
+  font-family: auto;
+  color: gray;
+  margin-top: 8px;
+  margin-left: 10px;
+}
+#blog-detail .details .section-3 .comment-3 .image-names .description-4 {
+  width: 708px;
+  margin-left: 149px;
+  margin-top: -50px;
+}
+#blog-detail .details .section-3 .comment-3 .image-names .description-4 p {
+  color: gray;
+  font-family: auto;
+}
+#blog-detail .details .section-4 {
+  margin-top: 100px;
+}
+#blog-detail .details .section-4 .post-comment h4 {
+  font-family: auto;
+}
+#blog-detail .details .section-4 .user-comment {
+  margin-top: 40px;
+}
+#blog-detail .details .section-4 .user-comment p {
+  font-size: 20px;
+  font-family: auto;
+  font-weight: bold;
+}
+#blog-detail .details .section-4 .user-comment input {
+  width: 100%;
+  height: 50px;
+  border: 1px solid rgba(128, 128, 128, 0.2117647059);
+  padding-left: 15px;
+  outline: none;
+}
+#blog-detail .details .section-4 .user-comment textarea {
+  width: 100%;
+  border: 1px solid rgba(128, 128, 128, 0.2117647059);
+  padding-left: 15px;
+  padding-top: 15px;
+  outline: none;
+}
+#blog-detail .details .section-4 .user-comment .submit-button {
+  margin-top: 20px;
+}
+#blog-detail .details .section-4 .user-comment .submit-button button {
+  width: 130px;
+  height: 50px;
+  background-color: #d14031;
+  color: white;
+  border: none;
+  font-family: initial;
+}
+#blog-detail .details .section-4 .user-comment .submit-button button:hover {
+  background-color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#blog-detail .section-5 {
+  margin-left: 100px;
+}
+#blog-detail .section-5 .country {
+  margin-top: 30px;
+}
+#blog-detail .section-5 .country p {
+  color: gray;
+  font-family: initial;
+}
+#blog-detail .section-5 .name {
+  margin-top: -15px;
+}
+#blog-detail .section-5 .name h4 {
+  cursor: pointer;
+  font-family: initial;
+}
+#blog-detail .section-5 .name h4:hover {
+  color: #d14031;
+  transition: 0.5s;
+}
+#blog-detail .section-5 .description p {
+  width: 198px;
+}
+#blog-detail .section-5 .borders {
+  display: flex;
+  gap: 30px;
+}
+#blog-detail .section-5 .borders .border {
+  width: 100%;
+}
+#blog-detail .section-5 .logo {
+  margin-top: -18px;
+}
+#blog-detail .section-5 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog-detail .section-6 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog-detail .section-6 .categories h5 {
+  font-family: initial;
+}
+#blog-detail .section-6 .category {
+  margin-top: 15px;
+}
+#blog-detail .section-6 .category p {
+  color: gray;
+  font-family: initial;
+}
+#blog-detail .section-6 .category p:hover {
+  color: #d14031;
+  transition: 0.5s;
+  cursor: pointer;
+}
+#blog-detail .section-6 .borders {
+  display: flex;
+  gap: 30px;
+}
+#blog-detail .section-6 .borders .border {
+  width: 100%;
+}
+#blog-detail .section-6 .logo {
+  margin-top: -18px;
+}
+#blog-detail .section-6 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog-detail .section-7 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog-detail .section-7 .image img {
+  width: 100%;
+}
+#blog-detail .section-7 .borders {
+  display: flex;
+  gap: 30px;
+  margin-top: 50px;
+}
+#blog-detail .section-7 .borders .border {
+  width: 100%;
+}
+#blog-detail .section-7 .logo {
+  margin-top: -18px;
+}
+#blog-detail .section-7 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog-detail .section-8 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog-detail .section-8 .tags h5 {
+  font-family: initial;
+}
+#blog-detail .section-8 .tags-name {
+  margin-top: 15px;
+}
+#blog-detail .section-8 .tags-name p {
+  color: gray;
+  font-family: initial;
+  font-size: 20px;
+}
+#blog-detail .section-8 .tags-name p:hover {
+  color: #d14031;
+  transition: 0.5s;
+  cursor: pointer;
+}
+#blog-detail .section-8 .borders {
+  display: flex;
+  gap: 30px;
+  margin-top: 50px;
+}
+#blog-detail .section-8 .borders .border {
+  width: 100%;
+}
+#blog-detail .section-8 .logo {
+  margin-top: -18px;
+}
+#blog-detail .section-8 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog-detail .section-9 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog-detail .section-9 .socials h5 {
+  font-family: initial;
+}
+#blog-detail .section-9 .icons {
+  margin-left: -33px;
+  margin-top: 20px;
+}
+#blog-detail .section-9 .icons ul {
+  display: flex;
+  gap: 15px;
+}
+#blog-detail .section-9 .icons ul li {
+  list-style: none;
+}
+#blog-detail .section-9 .icons ul li a {
+  text-decoration: none;
+}
+#blog-detail .section-9 .icons ul li a i {
+  color: black;
+}
+#blog-detail .section-9 .icons ul li a i:hover {
+  color: #d14031;
+  transition: 0.5s;
+}
+#blog-detail .section-9 .borders {
+  display: flex;
+  gap: 30px;
+  margin-top: 50px;
+}
+#blog-detail .section-9 .borders .border {
+  width: 100%;
+}
+#blog-detail .section-9 .logo {
+  margin-top: -18px;
+}
+#blog-detail .section-9 .logo span {
+  font-size: 20px;
+  margin-left: 152px;
+}
+#blog-detail .section-10 {
+  margin-left: 100px;
+  margin-top: 30px;
+}
+#blog-detail .section-10 .latest-titles h5 {
+  font-family: initial;
+}
+#blog-detail .section-10 .image-name {
+  display: flex;
+}
+#blog-detail .section-10 .image-name .image img {
+  width: 70px;
+}
+#blog-detail .section-10 .image-name .name-price {
+  margin-left: 15px;
+  margin-top: 10px;
+}
+#blog-detail .section-10 .image-name .name-price a {
+  text-decoration: none;
+  font-family: initial;
+  color: gray;
+  font-size: 20px;
+}
+#blog-detail .section-10 .image-name .name-price a:hover {
+  color: #d14031;
+  transition: 0.5s;
+}
+#blog-detail .section-10 .image-name .name-price p {
+  font-family: initial;
+}
+
+#footer {
+  margin-top: 150px;
+  background-color: #282828;
+  width: 100%;
+  height: 450px;
+}
+#footer .left1 {
+  margin-top: 80px;
+}
+#footer .left1 h4 {
+  color: white;
+}
+#footer .left1 .story {
+  margin-top: 40px;
+}
+#footer .left1 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left1 .story p:hover {
+  color: white;
+  transition: 0.5s;
+}
+#footer .left2 {
+  margin-top: 80px;
+}
+#footer .left2 h4 {
+  color: white;
+}
+#footer .left2 .story {
+  margin-top: 40px;
+}
+#footer .left2 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left2 .story p:nth-child(2) {
+  margin-top: -15px;
+}
+#footer .left2 .story p:nth-child(3) {
+  margin-top: -15px;
+}
+#footer .left2 .icons a i {
+  color: rgb(153, 153, 153);
+}
+#footer .left2 .icons a i:hover {
+  color: white;
+  transition: 0.5s;
+}
+#footer .left3 {
+  margin-top: 80px;
+}
+#footer .left3 h4 {
+  color: white;
+}
+#footer .left3 .story {
+  margin-top: 40px;
+}
+#footer .left3 .story p {
+  cursor: pointer;
+  color: rgb(153, 153, 153);
+}
+#footer .left3 .story p:nth-child(2) {
+  margin-top: -15px;
+}
+#footer .left3 .email-input input {
+  background-color: #282828;
+  border: 1px solid rgb(153, 153, 153);
+  width: 260px;
+  height: 50px;
+}
+#footer .right {
+  margin-top: 80px;
+}
+#footer .right h4 {
+  color: white;
+}
+#footer .right .story {
+  margin-top: 40px;
+}
+#footer .right .story .images1 {
+  display: flex;
+  gap: 10px;
+}
+#footer .right .story .images1 img {
+  width: 100%;
+}
+#footer .right .story .images2 {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+#footer .right .story .images2 img {
+  width: 100%;
+}
+#footer .btn {
+  margin-left: 350px;
+}
+#footer .btn #topbtn {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+#footer .btn #topbtn i {
+  color: #909090;
+  font-size: 23px;
 }/*# sourceMappingURL=style.css.map */
